force-app/main/default/objects/Registration__c/fields/Accept_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Accept_Terms_and_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically ticked if the client has accepted the standard T&amp;Cs.</inlineHelpText>
    <label>Accept Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>