force-app/main/default/objects/Registration__c/fields/Account_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Approval_Status__c</fullName>
    <formula>IF(INCLUDES( Product__c ,&#39;VANs&#39;),  
IF( Account_Approved__c = false, &#39;Not Approved&#39;, &#39;Approved&#39;) , &#39;Not Required&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Approval Status</label>
    <type>Text</type>
</CustomField>