force-app/main/default/objects/Registration__c/fields/Account_Approved__c.field-meta.xml
<CustomField>
    <fullName>Account_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked if the &#39;Account Approval&#39; task if the linked account is completed and approved.</description>
    <label>Account Approved</label>
    <type>Checkbox</type>
</CustomField>