force-app/main/default/objects/Registration__c/fields/Account_ECN__c.field-meta.xml
<CustomField>
    <fullName>Account_ECN__c</fullName>
    <formula>Account__r.ECN__c</formula>
    <label>ECN</label>
    <type>Text</type>
</CustomField>