force-app/main/default/objects/Registration__c/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <description>Used to Reference Account Region in Registration object reporting - AML</description>
    <formula>Text(Account__r.Region__c)</formula>
    <label>Account Region</label>
    <type>Text</type>
</CustomField>