force-app/main/default/objects/Registration__c/fields/Active_BO_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_BO_Count__c</fullName>
    <label>Active Beneficial Owner Count</label>
    <summaryFilterItems>
        <field>Beneficial_Owner__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Beneficial_Owner__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>