force-app/main/default/objects/Registration__c/fields/Active_Payable_Account_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Payable_Account_Count__c</fullName>
    <label>Active Payable Account Count</label>
    <summaryFilterItems>
        <field>Registration_Bank_Account__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Registration_Bank_Account__c.Account_Type__c</field>
        <operation>equals</operation>
        <value>Payable</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Bank_Account__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>