force-app/main/default/objects/Registration__c/fields/Agency_Group__c.field-meta.xml
<CustomField>
    <fullName>Agency_Group__c</fullName>
    <description>From Lead</description>
    <label>Agency Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>ADVANTAGE FOCUS GROUP</fullName>
            </value>
            <value>
                <fullName>AER</fullName>
            </value>
            <value>
                <fullName>AFAT</fullName>
            </value>
            <value>
                <fullName>AIRMET</fullName>
            </value>
            <value>
                <fullName>Air Ticket</fullName>
            </value>
            <value>
                <fullName>AIRTRADE</fullName>
            </value>
            <value>
                <fullName>AMAVET</fullName>
            </value>
            <value>
                <fullName>AMERICAN EXPRESS</fullName>
            </value>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>AREA</fullName>
            </value>
            <value>
                <fullName>ARES</fullName>
            </value>
            <value>
                <fullName>AR Group</fullName>
            </value>
            <value>
                <fullName>ASSOC OF CHINESE TRAVEL AGENTS</fullName>
            </value>
            <value>
                <fullName>ASSORTED</fullName>
            </value>
            <value>
                <fullName>ATAC</fullName>
            </value>
            <value>
                <fullName>A TEAM</fullName>
            </value>
            <value>
                <fullName>ATP</fullName>
            </value>
            <value>
                <fullName>ATPI</fullName>
            </value>
            <value>
                <fullName>ATP ONLINE HK</fullName>
            </value>
            <value>
                <fullName>BAIA DI LUNA</fullName>
            </value>
            <value>
                <fullName>BARCELO</fullName>
            </value>
            <value>
                <fullName>BCD</fullName>
            </value>
            <value>
                <fullName>BCD GROUP</fullName>
            </value>
            <value>
                <fullName>Berg-Hansen</fullName>
            </value>
            <value>
                <fullName>BEST TRAVEL</fullName>
            </value>
            <value>
                <fullName>Big Travel</fullName>
            </value>
            <value>
                <fullName>Billetkontoret</fullName>
            </value>
            <value>
                <fullName>BONOLATOURS</fullName>
            </value>
            <value>
                <fullName>BTP UA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>