force-app/main/default/objects/Registration__c/fields/AML_Marker__c.field-meta.xml
<CustomField>
    <fullName>AML_Marker__c</fullName>
    <label>AML Marker</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquirer</fullName>
            </value>
            <value>
                <fullName>Corporate Group</fullName>
            </value>
            <value>
                <fullName>External Nominated User</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Resuscitated</fullName>
            </value>
            <value>
                <fullName>Sanction</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Transaction Monitoring</fullName>
            </value>
            <value>
                <fullName>WUBS Pilot</fullName>
            </value>
            <value>
                <fullName>IATA Pilot</fullName>
            </value>
            <value>
                <fullName>Adyen 403054</fullName>
                <isActive>false</isActive>
                <label>Adyen 403054</label>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <isActive>false</isActive>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>Corporate Tax</fullName>
                <isActive>false</isActive>
                <label>Corporate Tax</label>
            </value>
            <value>
                <fullName>Corporate Travel</fullName>
                <isActive>false</isActive>
                <label>Corporate Travel</label>
            </value>
            <value>
                <fullName>Country Risk</fullName>
                <isActive>false</isActive>
                <label>Country Risk</label>
            </value>
            <value>
                <fullName>Digital River 404071</fullName>
                <isActive>false</isActive>
                <label>Digital River 404071</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <isActive>false</isActive>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>EFT to VAN</fullName>
                <isActive>false</isActive>
                <label>EFT to VAN</label>
            </value>
            <value>
                <fullName>Folio Wallet Pilot</fullName>
                <isActive>false</isActive>
                <label>Folio Wallet Pilot</label>
            </value>
            <value>
                <fullName>Fraud</fullName>
                <isActive>false</isActive>
                <label>Fraud</label>
            </value>
            <value>
                <fullName>Funds eNett</fullName>
                <isActive>false</isActive>
                <label>Funds eNett</label>
            </value>
            <value>
                <fullName>GlobalCollect ECN</fullName>
                <isActive>false</isActive>
                <label>GlobalCollect ECN</label>
            </value>
            <value>
                <fullName>Government</fullName>
                <isActive>false</isActive>
                <label>Government</label>
            </value>
            <value>
                <fullName>Group</fullName>
                <isActive>false</isActive>
                <label>Group</label>
            </value>
            <value>
                <fullName>Internal</fullName>
                <isActive>false</isActive>
                <label>Internal</label>
            </value>
            <value>
                <fullName>Non-Disclosure Agreement (NDA)</fullName>
                <isActive>false</isActive>
                <label>Non-Disclosure Agreement (NDA)</label>
            </value>
            <value>
                <fullName>Original</fullName>
                <isActive>false</isActive>
                <label>Original</label>
            </value>
            <value>
                <fullName>PEP</fullName>
                <isActive>false</isActive>
                <label>PEP</label>
            </value>
            <value>
                <fullName>Payment intermediary</fullName>
                <isActive>false</isActive>
                <label>Payment intermediary</label>
            </value>
            <value>
                <fullName>Referrer</fullName>
                <isActive>false</isActive>
                <label>Referrer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>