force-app/main/default/objects/Registration__c/fields/Approval_Completed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Completed__c</fullName>
    <label>Approval Completed</label>
    <type>Date</type>
</CustomField>