force-app/main/default/objects/Registration__c/fields/Bank_Account_Details__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Account Details</label>
    <type>Checkbox</type>
</CustomField>