force-app/main/default/objects/Registration__c/fields/Beneficial_Owner_Validation_Error__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Validation_Error__c</fullName>
    <formula>AND(
OR(ISPICKVAL( Business_Type__c,&quot;Partnership&quot;),ISPICKVAL( Business_Type__c,&quot;Private Company&quot;),ISPICKVAL( Business_Type__c,&quot;Trusts/Foundation&quot;),ISPICKVAL( Business_Type__c,&quot;Association/Club&quot;)), INCLUDES(Product__c,&quot;VANs&quot;),
Active_BO_Count__c=0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficial Owner Validation Error</label>
    <type>Checkbox</type>
</CustomField>