force-app/main/default/objects/Registration__c/fields/BH_AwaitingClient__c.field-meta.xml
<CustomField>
    <fullName>BH_AwaitingClient__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Business Hours - Awaiting Client</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>