force-app/main/default/objects/Registration__c/fields/BH_InProgress__c.field-meta.xml
<CustomField>
    <fullName>BH_InProgress__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Business Hours - In Progress</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>