force-app/main/default/objects/Registration__c/fields/BH_NonResponsive__c.field-meta.xml
<CustomField>
    <fullName>BH_NonResponsive__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Business Hours - Non Responsive</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>