force-app/main/default/objects/Registration__c/fields/BH_Region__c.field-meta.xml
<CustomField>
    <fullName>BH_Region__c</fullName>
    <formula>CASE(DD_Status__c, &#39;Referred&#39;, BH_Region_Escalated__c, &#39;Awaiting Approval&#39;, BH_Region_Approval__c, &#39;Approval in Progress&#39;, BH_Region_Approval__c, BH_Region_Registration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Hours Region</label>
    <type>Text</type>
</CustomField>