force-app/main/default/objects/Registration__c/fields/BH_Region_Approval__c.field-meta.xml
<CustomField>
    <fullName>BH_Region_Approval__c</fullName>
    <formula>IF(ISBLANK(Approver__c), &#39;APAC&#39;, CASE(TEXT(Approver__r.User_Region__c), &#39;APAC&#39;, &#39;APAC&#39;, &#39;Americas&#39;, &#39;Americas&#39;,&#39;EMEA&#39;,&#39;EMEA&#39;,&#39;APAC&#39;))</formula>
    <label>Business Hours Region - Approval</label>
    <type>Text</type>
</CustomField>