force-app/main/default/objects/Registration__c/fields/BH_Region_Escalated__c.field-meta.xml
<CustomField>
    <fullName>BH_Region_Escalated__c</fullName>
    <formula>IF(ISBLANK(Escalated_To__c), &#39;APAC&#39;, CASE(TEXT(Escalated_To__r.User_Region__c), &#39;APAC&#39;, &#39;APAC&#39;, &#39;Americas&#39;, &#39;Americas&#39;,&#39;EMEA&#39;,&#39;EMEA&#39;,&#39;APAC&#39;))</formula>
    <label>Business Hours Region - Escalated</label>
    <type>Text</type>
</CustomField>