force-app/main/default/objects/Registration__c/fields/BH_Region_Registration__c.field-meta.xml
<CustomField>
    <fullName>BH_Region_Registration__c</fullName>
    <formula>CASE(TEXT(Owner:User.User_Region__c), &#39;APAC&#39;, &#39;APAC&#39;, &#39;Americas&#39;, &#39;Americas&#39;,&#39;EMEA&#39;,&#39;EMEA&#39;,&#39;APAC&#39;)</formula>
    <label>Business Hours Region - Registration</label>
    <type>Text</type>
</CustomField>