force-app/main/default/objects/Registration__c/fields/BHD_InProgress__c.field-meta.xml
<CustomField>
    <fullName>BHD_InProgress__c</fullName>
    <formula>TEXT(ROUND(BH_InProgress__c,2)) + &#39; hours (&#39; + TEXT(ROUND(BH_InProgress__c/8.0,1)) + &#39; days)&#39;</formula>
    <label>In Progress</label>
    <type>Text</type>
</CustomField>