force-app/main/default/objects/Registration__c/fields/BHD_NeedsMoreTime__c.field-meta.xml
<CustomField>
    <fullName>BHD_NeedsMoreTime__c</fullName>
    <formula>TEXT(ROUND(BH_NeedsMoreTime__c,2)) + &#39; hours (&#39; + TEXT(ROUND(BH_NeedsMoreTime__c/8.0,1)) + &#39; days)&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs More Time</label>
    <type>Text</type>
</CustomField>