force-app/main/default/objects/Registration__c/fields/BHD_OnHold__c.field-meta.xml
<CustomField>
    <fullName>BHD_OnHold__c</fullName>
    <formula>TEXT(ROUND(BH_OnHold__c,2)) + &#39; hours (&#39; + TEXT(ROUND(BH_OnHold__c/8.0,1)) + &#39; days)&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Hold</label>
    <type>Text</type>
</CustomField>