force-app/main/default/objects/Registration__c/fields/BSB_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>BSB_Branch_Code__c</fullName>
    <label>BSB / Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>