force-app/main/default/objects/Registration__c/fields/BState_Name__c.field-meta.xml
<CustomField>
    <fullName>BState_Name__c</fullName>
    <formula>State_Province__r.Name</formula>
    <label>Bus State/Province</label>
    <type>Text</type>
</CustomField>