force-app/main/default/objects/Registration__c/fields/Business_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Number__c</fullName>
    <label>Business Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>