force-app/main/default/objects/Registration__c/fields/Business_presence_in_high_risk_country__c.field-meta.xml
<CustomField>
    <fullName>Business_presence_in_high_risk_country__c</fullName>
    <inlineHelpText>Select which countries the client has a presence in (Allows selecting multiple values)</inlineHelpText>
    <label>Business presence in high risk country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Any African Territory</fullName>
            </value>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
            <value>
                <fullName>Belarus</fullName>
            </value>
            <value>
                <fullName>Cuba</fullName>
            </value>
            <value>
                <fullName>Ecuador</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Iran</fullName>
            </value>
            <value>
                <fullName>Iraq</fullName>
            </value>
            <value>
                <fullName>Lebanon</fullName>
            </value>
            <value>
                <fullName>Myanmar</fullName>
            </value>
            <value>
                <fullName>North Korea</fullName>
            </value>
            <value>
                <fullName>Pakistan</fullName>
            </value>
            <value>
                <fullName>Serbia</fullName>
            </value>
            <value>
                <fullName>Syria</fullName>
            </value>
            <value>
                <fullName>Yemen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>