force-app/main/default/objects/Registration__c/fields/Business_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Registration_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Registration Number</label>
    <type>Checkbox</type>
</CustomField>