force-app/main/default/objects/Registration__c/fields/Business_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Tax_Number__c</fullName>
    <description>Business Tax Number</description>
    <label>Business Tax Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>